--- a/gfd.html
+++ b/gfd.html
@@ -42,6 +42,6 @@
     <p style="text-indent: 40px"> - Appendix: Numerical solution to two-dimensional surface gravity wave problem <a href="vis_wave2d.gif">(gif)</a></p>
     <p style="text-indent: 40px"> - Appendix: Numerical solution to Poincare wave problem <a href="vis_poincare1d.gif">(gif)</a></p>
     <p>2025.01.05 18. Geostrophic adjustment <a href="w18_geostrophic_adjustment.pdf">(pdf)</a><a href="https://www.youtube.com/watch?v=CaN63VuIFns&t=26s">(video)</a></p>
-    <p>2025.01.19 19. Rossby wave <a href="w19_wave_rossby.pdf">(pdf)</a></p>
+    <p>2025.01.19 19. Wave in rotation: Rossby wave <a href="w19_wave_rossby.pdf">(pdf)</a><a href="https://www.youtube.com/watch?v=fv3tSpJZBIQ">(video)</a></p>
   </body>
 </html>
